--- a/EJERCICIOS/3. SENTENCIAS.md
+++ b/EJERCICIOS/3. SENTENCIAS.md
@@ -2,6 +2,42 @@
 1 Ordenar 3 números, pedidos por consola, de mayor a menor.
 
       tu código aqui
+      
+import java.util.Scanner;
+public class MayorMenor {
+    public static void main(String[] args) {
+        int num1 = 0,num2 = 0,num3 = 0;
+        Scanner in = new Scanner(System.in);
+        System.out.print("Ingrese el primer numero: ");
+        num1 = in.nextInt();
+        System.out.print("Ingrese el segundo numero: ");
+        num2 = in.nextInt();
+        System.out.print("Ingrese el tercer numero: ");
+        num3 = in.nextInt();
+        if((num1>num2)&&(num2>num3)){
+            System.out.println("Tus numeros son "+num1+num2+num3);
+        }
+        else if((num1>num3)&&(num3>num2)){
+                 System.out.println("Tus numeros son "+num1+num3+num2);
+        }
+             else if((num2>num3)&&(num3>num1)){
+                     System.out.println("Tus numeros son "+num2+num3+num1);
+             }
+                 else if((num2>num1)&&(num1>num3)){
+                         System.out.println("Tus numeros son "+num2+num1+num3);
+                 }
+                     else if((num3>num1)&&(num1>num2)){
+                             System.out.println("Tus numeros son "+num3+num1+num2);
+                     }
+                         else if((num3>num2)&&(num2>num1)){
+                                 System.out.println("Tus numeros son "+num3+" "+num2+" "+num1);
+                         }   
+    }
+}
+
+
+![image](https://user-images.githubusercontent.com/104279605/175792576-f0124935-dc3e-49ef-8d64-7a261bc306ba.png)
+
 
 2  Pedir un número entre 0 y 99999 y decir cuantas cifras tiene.
 
