--- a/EJERCICIOS/1. VARIABLES.md
+++ b/EJERCICIOS/1. VARIABLES.md
@@ -3,14 +3,69 @@ Vamos a escribir el código necesario y posteriormente a llevarlo a la página d
 
 1. Escribe un ¡Hola Mundo! en Java
      
-     Escribe aqui tu código
+R= 
+public class HolaMundo{
+    public static void main(String[] args) {
+    System.out.println("Hola Mundo :)");
+    }
+}     
      
 2. Realiza un programa que realice las 4 operaciones básicas(suma, resta, división y multplicación) en Java e imprima los resultados
 
     Escribe aqui tu código
+public class OperacionesBasicas {
+      public static void main(String[] args) {
+        float num1 = 50;
+        float num2 = 13;
+        float res = 0;
+        res = num1 + num2;
+        System.out.println("Hola " + " el resultado de sumar " + num1 + " mas " + num2 + ", es " + res);
+        res = num1 - num2;
+        System.out.println("Hola " + " el resultado de restar " + num1 + " menos " + num2 + ", es " + res);
+        res = num1 * num2;
+        System.out.println("Hola " + " el resultado de multiplicar " + num1 + " por " + num2 + ", es " + res);
+        res = num1 / num2;
+        System.out.println("Hola " + " el resultado de dividir " + num1 + " entre " + num2 + ", es " + res);
+      }
+}
+
+![image](https://user-images.githubusercontent.com/104279605/175791025-ece892b3-aff4-4f44-9e4f-b7af0f01c654.png)
+*
+
+/
+
+
     
 3. Ingresando cuatro notas de un alumno imprime su promedio con su nombre.
 
     Escribe aqui tu código
     
+    import java.util.Scanner;
+public class Promedio {
+    public static void main(String[] args) {
+        Scanner in = new Scanner(System.in);
+        String nombre="";
+        float num1 = 0,num2 = 0,num3 = 0,num4 = 0,prom = 0;
+        System.out.println("cual es tu nombre");
+        nombre = in.nextLine();
+        System.out.println("dame la primera calificacion");
+        num1 = in.nextInt();
+        System.out.println("dame la segunda calificacion");
+        num2 = in.nextInt();
+        System.out.println("dame la tercera calificacion");
+        num3 = in.nextInt();
+        System.out.println("dame la cuarta calificacion");
+        num4 = in.nextInt();
+        prom = (num1 + num2 + num3 + num4) / 4;
+        System.out.println("Hola " + nombre + " tu promedio de tus calificaciones es " + prom);
+    }
+}
+    
  4. Calcular el porcentaje que debe pagar un cliente, en la compra de una motocicleta a plazos en un periodo de 6 meses, si el interés mensual progresivo es de 3.5 % .
+
+
+
+
+
+
+
