--- a/EJERCICIOS/1. VARIABLES.md
+++ b/EJERCICIOS/1. VARIABLES.md
@@ -100,6 +100,9 @@ public class Promedio {
     }
     
 }
+
+![image](https://user-images.githubusercontent.com/104279605/175792628-e9ddd44f-84d1-4048-9b80-e731e50e9928.png)
+
     
  4. Calcular el porcentaje que debe pagar un cliente, en la compra de una motocicleta a plazos en un periodo de 6 meses, si el interés mensual progresivo es de 3.5 % .
 
