--- a/EJERCICIOS/3. SENTENCIAS.md
+++ b/EJERCICIOS/3. SENTENCIAS.md
@@ -80,4 +80,35 @@ public class MayorMenor {
 4. Mostrar las tablas de multiplicar del número que ingrese el usuario
   
        tu codigo aqui
-  
+      
+  import java.util.Scanner;
+      
+public class TablaMultiplicar {
+      
+    public static void main(String[] args) {
+      
+        Scanner in = new Scanner(System.in);
+      
+        int numt = 0,i;
+      
+        System.out.print("Ingrese el numero de latabla de multiplicar que quiere ");
+      
+        numt = in.nextInt();
+      
+        System.out.println ("\n\nTabla del " +numt);  
+      
+        System.out.println ("---------------");
+      
+        for (i=1;i<=10;i++)
+                           
+        {
+                           
+         System.out.println (numt + " x " + i + " = " + numt*i);
+                           
+        }
+     
+    }
+}
+                           
+![image](https://user-images.githubusercontent.com/104279605/175793350-ae8ff6db-7d01-4c8e-bdc3-231d091bf053.png)
+
